--- a/clientes.html
+++ b/clientes.html
@@ -11,10 +11,7 @@
 		<header>
 			<div class="logo">
 				<img src="images/logo.png" alt="logo">	
-			</div>
-			<div class="titular">
-				<h1>Soluciones Contables, Financieras e Integrales SAC</h1>	
-			</div>
+			</div>s
 			<div class="sociales">
 				<a href="#">F</a>
 				<a href="#">T</a>
