--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
 			<div class="logo">
 				<img src="images/logo.png" alt="logo">	
 			</div>
-			<div class="titular">
-				<h1>Soluciones Contables, Financieras e Integrales SAC</h1>	
-			</div>
-			<div class="sociales">
-				<a href="#">F</a>
-				<a href="#">T</a>
-				<a href="#">Y</a>
-			</div>
+			<ul id="m-soc4">
+				<li>
+					<a class="twitter" href="#"><span>Twitter</span></a>
+				</li>
+				<li>
+					<a class="facebook" href="#"><span>Facebook</span></a>
+				</li>
+				<li>
+					<a class="youtube" href="#"><span>YouTube</span></a>
+				</li>
+			</ul>
 		</header>
 		<nav>
 			<ul class="menu">
